# host-reference

./: .gitignore  Cargo.toml  README.md  deny.toml  host-reference.allium  host-reference.obligations  rust-toolchain.toml
.github/workflows/: ci.yml
crates/asciidoc/: Cargo.toml
crates/asciidoc/fixtures/guide/: expected.golden  input.adoc
crates/asciidoc/src/: lib.rs
crates/asciidoc/tests/: conformance.rs
crates/av/: Cargo.toml
crates/av/fixtures/clip/: expected.golden
crates/av/fixtures/tone/: expected.golden
crates/av/src/: lib.rs
crates/av/tests/: conformance.rs  hostile.rs
crates/bibtex/: Cargo.toml
crates/bibtex/fixtures/refs/: expected.golden  input.bib
crates/bibtex/src/: lib.rs
crates/bibtex/tests/: conformance.rs
crates/calendar/: Cargo.toml
crates/calendar/fixtures/contacts/: expected.golden  input.vcf
crates/calendar/fixtures/events/: expected.golden  input.ics
crates/calendar/src/: lib.rs
crates/calendar/tests/: conformance.rs  hostile.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/columnar/: Cargo.toml
crates/columnar/fixtures/frame/: expected.golden
crates/columnar/fixtures/table/: expected.golden
crates/columnar/src/: lib.rs
crates/columnar/tests/: conformance.rs
crates/config/: Cargo.toml
crates/config/fixtures/app/: expected.golden  input.properties
crates/config/fixtures/dotenv/: expected.golden  input.env
crates/config/fixtures/settings/: expected.golden
crates/config/src/: lib.rs
crates/config/tests/: conformance.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: contract.rs
crates/data/: Cargo.toml
crates/data/fixtures/config/: expected.golden  input.yaml
crates/data/fixtures/feed/: expected.golden  input.xml
crates/data/fixtures/grid/: expected.golden  input.tsv
crates/data/fixtures/manifest/: expected.golden  input.toml
crates/data/fixtures/notebook/: expected.golden  input.ipynb
crates/data/fixtures/object/: expected.golden  input.json
crates/data/fixtures/stream/: expected.golden  input.ndjson
crates/data/fixtures/table/: expected.golden  input.csv
crates/data/src/: lib.rs
crates/data/tests/: conformance.rs
crates/eda/: Cargo.toml
crates/eda/fixtures/board/: expected.golden  input.sch
crates/eda/fixtures/copper/: expected.golden  input.gbr
crates/eda/fixtures/schematic/: expected.golden  input.kicad_sch
crates/eda/src/: lib.rs
crates/eda/tests/: conformance.rs
crates/epub/: Cargo.toml
crates/epub/fixtures/book/: expected.golden
crates/epub/src/: lib.rs
crates/epub/tests/: conformance.rs  hostile.rs
crates/geometry/: Cargo.toml
crates/geometry/fixtures/additive/: expected.golden  input.amf
crates/geometry/fixtures/cube/: expected.golden
crates/geometry/fixtures/drawing/: expected.golden
crates/geometry/fixtures/exchange/: expected.golden  input.step
crates/geometry/fixtures/mesh/: expected.golden
crates/geometry/fixtures/points/: expected.golden  input.ply
crates/geometry/fixtures/print/: expected.golden  input.3mf
crates/geometry/fixtures/scene/: expected.golden  input.gltf
crates/geometry/fixtures/toolpath/: expected.golden  input.gcode
crates/geometry/src/: lib.rs
crates/geometry/tests/: conformance.rs
crates/html/: Cargo.toml
crates/html/fixtures/page/: expected.golden  input.html
crates/html/src/: lib.rs
crates/html/tests/: conformance.rs
crates/image/: Cargo.toml
crates/image/fixtures/camera/: expected.golden
crates/image/fixtures/photo/: expected.golden
crates/image/src/: lib.rs
crates/image/tests/: conformance.rs
crates/mail/: Cargo.toml
crates/mail/fixtures/message/: expected.golden  input.eml
crates/mail/src/: lib.rs
crates/mail/tests/: conformance.rs
crates/netlist/: Cargo.toml
crates/netlist/fixtures/rc/: expected.golden  input.cir
crates/netlist/src/: lib.rs
crates/netlist/tests/: conformance.rs
crates/ocr/: Cargo.toml
crates/ocr-helper/: Cargo.toml  NOTICE.md
crates/ocr/fixtures/scan/: expected.golden
crates/ocr/src/: lib.rs
crates/ocr/tests/: conformance.rs
crates/office/: Cargo.toml
crates/office/fixtures/deck/: expected.golden
crates/office/fixtures/report/: expected.golden
crates/office/fixtures/workbook/: expected.golden
crates/office/src/: lib.rs
crates/office/tests/: conformance.rs  hostile.rs
crates/openscad/: Cargo.toml
crates/openscad/fixtures/model/: expected.golden
crates/openscad/src/: lib.rs
crates/openscad/tests/: conformance.rs
crates/org/: Cargo.toml
crates/org/fixtures/notes/: expected.golden  input.org
crates/org/src/: lib.rs
crates/org/tests/: conformance.rs
crates/overlay/: Cargo.toml
crates/overlay/src/: lib.rs
crates/overlay/tests/: lens_law.rs  overlay.rs
crates/pdf/: Cargo.toml
crates/pdf/fixtures/datasheet/: expected.golden
crates/pdf/src/: lib.rs
crates/pdf/tests/: conformance.rs
crates/prose/: Cargo.toml
crates/prose/fixtures/basic/: expected.golden  input.md
crates/prose/src/: lib.rs
crates/prose/tests/: conformance.rs
crates/rst/: Cargo.toml
crates/rst/fixtures/guide/: expected.golden  input.rst
crates/rst/fixtures/markup/: expected.golden  input.rst
crates/rst/src/: lib.rs
crates/rst/tests/: conformance.rs
crates/rtf/: Cargo.toml
crates/rtf/fixtures/letter/: expected.golden  input.rtf
crates/rtf/src/: lib.rs
crates/rtf/tests/: conformance.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs
crates/vector/: Cargo.toml
crates/vector/fixtures/diagram/: expected.golden
crates/vector/src/: lib.rs
crates/vector/tests/: conformance.rs
