[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/prose", "crates/data", "crates/config", "crates/calendar", "crates/columnar", "crates/bibtex", "crates/rst", "crates/org", "crates/asciidoc", "crates/rtf", "crates/epub", "crates/office", "crates/mail", "crates/pdf", "crates/geometry", "crates/eda", "crates/html", "crates/vector", "crates/netlist"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Unlicense"

# Reproducible builds: strip symbols and the .comment section so the release binary
# carries no build-environment metadata. With --build-id=none (.cargo/config.toml)
# the Linux artifact hashes the same anywhere; software --verify-build proves it.
[profile.release]
strip = true
