[package]
name = "host-reference"
description = "host-reference CLI: a skeleton and windowed views over a normalised corpus"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "host-reference"
path = "src/main.rs"

[dependencies]
host-reference-core = { path = "../core" }
host-reference-prose = { path = "../prose", optional = true }
host-reference-data = { path = "../data", optional = true }
host-reference-html = { path = "../html", optional = true }
host-reference-vector = { path = "../vector", optional = true }
host-reference-netlist = { path = "../netlist", optional = true }
host-reference-config = { path = "../config", optional = true }
host-reference-calendar = { path = "../calendar", optional = true }

# Each reader is a plugin behind a feature (call/0033). The default carries the
# text-cheap readers, which are light. Heavier readers (office, fixed-layout,
# recognition, geometry) land as their own features and stay out of `default`,
# so a consumer pays only for what it stands up.
[features]
default = ["text"]
text = ["prose", "data", "config", "html", "vector", "netlist"]
prose = ["dep:host-reference-prose"]
data = ["dep:host-reference-data"]
config = ["dep:host-reference-config"]
calendar = ["dep:host-reference-calendar"]
html = ["dep:host-reference-html"]
vector = ["dep:host-reference-vector"]
netlist = ["dep:host-reference-netlist"]
