[package]
name = "host-reference"
description = "host-reference CLI: a skeleton and windowed views over a normalised corpus"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "host-reference"
path = "src/main.rs"

[dependencies]
host-reference-core = { path = "../core" }
host-reference-prose = { path = "../prose", optional = true }
host-reference-data = { path = "../data", optional = true }
host-reference-html = { path = "../html", optional = true }
host-reference-vector = { path = "../vector", optional = true }
host-reference-netlist = { path = "../netlist", optional = true }
host-reference-config = { path = "../config", optional = true }
host-reference-calendar = { path = "../calendar", optional = true }
host-reference-columnar = { path = "../columnar", optional = true }
host-reference-bibtex = { path = "../bibtex", optional = true }
host-reference-rst = { path = "../rst", optional = true }
host-reference-org = { path = "../org", optional = true }
host-reference-asciidoc = { path = "../asciidoc", optional = true }
host-reference-rtf = { path = "../rtf", optional = true }
host-reference-epub = { path = "../epub", optional = true }
host-reference-office = { path = "../office", optional = true }
host-reference-mail = { path = "../mail", optional = true }

# Each reader is a plugin behind a feature (call/0033). The default carries the
# text-cheap readers, which are light. Heavier readers (office, fixed-layout,
# recognition, geometry) land as their own features and stay out of `default`,
# so a consumer pays only for what it stands up.
[features]
default = ["text"]
text = ["prose", "data", "config", "html", "vector", "netlist"]
prose = ["dep:host-reference-prose"]
data = ["dep:host-reference-data"]
config = ["dep:host-reference-config"]
calendar = ["dep:host-reference-calendar"]
columnar = ["dep:host-reference-columnar"]
bibtex = ["dep:host-reference-bibtex"]
rst = ["dep:host-reference-rst"]
org = ["dep:host-reference-org"]
asciidoc = ["dep:host-reference-asciidoc"]
rtf = ["dep:host-reference-rtf"]
epub = ["dep:host-reference-epub"]
office = ["dep:host-reference-office"]
mail = ["dep:host-reference-mail"]
html = ["dep:host-reference-html"]
vector = ["dep:host-reference-vector"]
netlist = ["dep:host-reference-netlist"]
