[package]
name = "host-reference-core"
description = "host-reference core: the Normalizer trait, the modality taxonomy, and the two-layer types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sha2 = "0.11.0"
tiktoken-rs = "0.12.0"
# Only the archive-backed readers (office, EPUB) need the zip central-directory scan; gated so the
# text-only canonical binary carries no zip dependency.
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

[features]
archive = ["dep:zip"]
