[package]
name = "host-reference-epub"
description = "host-reference EPUB normaliser: table-of-contents outline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
host-reference-core = { path = "../core", features = ["archive"] }
rbook = "0.7"

[dev-dependencies]
host-reference-testkit = { path = "../testkit" }
zip = { version = "2", default-features = false, features = ["deflate"] }
