[package]
name = "host-reference-image"
description = "host-reference raster-image normaliser: attested format, dimensions, and EXIF"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
host-reference-core = { path = "../core" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
kamadak-exif = "0.6"

[dev-dependencies]
host-reference-testkit = { path = "../testkit" }
