[package]
name = "host-reference-mail"
description = "host-reference mail normaliser: internet mail (.eml)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
host-reference-core = { path = "../core" }
mail-parser = "0.11"

[dev-dependencies]
host-reference-testkit = { path = "../testkit" }
