[package]
name = "host-reference-ocr-helper"
description = "Out-of-process OCR helper for host-reference: an ocrs/rten engine carrying the CC-BY-SA-4.0 ocrs models behind the call/0033 arms-length boundary"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "host-reference-ocr-helper"
path = "src/main.rs"

[dependencies]
ocrs = "0.12"
rten = "0.24"
rten-tensor = "0.24"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
