[package]
name = "host-reference-ocr"
description = "host-reference OCR normaliser: the first out-of-process plugin (call/0033), running the ocr helper at arm's length"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
host-reference-core = { path = "../core" }
# Stage the image at an O_EXCL random temp path, not a predictable shared one (finding 10).
tempfile = "3"
